--- a/order/src/main/resources/application.yml
+++ b/order/src/main/resources/application.yml
@@ -1,9 +1,10 @@
 spring:
   datasource:
     username: root
-    url: jdbc:mysql://localhost:3306/orders?createDatabaseIfNotExist=true&serverTimezone=UTC&useSSL=false
+    url: jdbc:mariadb://localhost:3306/orders?createDatabaseIfNotExist=true&serverTimezone=UTC&useSSL=false
     password: 'root'
   jpa:
     show-sql: 'true'
     hibernate:
       ddl-auto: 'update'
+    open-in-view: false 
