--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,22 @@
+version: '3.1'
 services:
-  mysql-8:
-    image: mysql:8.0.18
-    command: --default-authentication-plugin=mysql_native_password
+  db:
+    image: mariadb:latest
     environment:
-      MYSQL_ALLOW_EMPTY_PASSWORD: "yes"
-      MYSQL_ROOT_PASSWORD: ""
-      MYSQL_DATABASE: "orders"
+      - MARIADB_ALLOW_EMPTY_PASSWORD=yes
+      - MARIADB_ROOT_PASSWORD=root
+      - MARIADB_USER=benefrancis
+      - MARIADB_PASSWORD=root
+      - MARIADB_DATABASE=orders
+    volumes:
+      - ./data:/var/lib/mariadb
     ports:
       - "3306:3306"
+  rabbitmq:
+   image: rabbitmq:3.7.8-management
+   ports: 
+   - 5672:5672
+   - 15672:15672
+   environment: 
+   - RABBITMQ_DEFAULT_USER=rabbitmq
+   - RABBITMQ_DEFAULT_PASS=rabbitmq
