--- a/notification/src/main/resources/application.yml
+++ b/notification/src/main/resources/application.yml
@@ -4,3 +4,8 @@ spring:
   devtools:
     livereload:
       enabled: false
+  rabbitmq:
+    host: localhost
+    port: 5672
+    username: rabbitmq
+    password: rabbitmq
