--- a/order/pom.xml
+++ b/order/pom.xml
@@ -11,7 +11,7 @@
 	</parent>
 	<groupId>br.com.benefrancis</groupId>
 	<artifactId>order</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>0.0.2</version>
 	<name>order</name>
 	<description>Ordens de Serviço</description>
 	<properties>
@@ -56,7 +56,7 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-amqp</artifactId>
 		</dependency>
- 
+
 	</dependencies>
 
 	<build>
@@ -74,6 +74,7 @@
 				</configuration>
 			</plugin>
 		</plugins>
+		<finalName>order</finalName>
 	</build>
 	<repositories>
 		<repository>
