finalizando o docker compose

--- a/cashback/src/main/resources/application.yml
+++ b/cashback/src/main/resources/application.yml
@@ -2,7 +2,7 @@ server:
   port: 8081
 spring:
   rabbitmq:
-    host: localhost
+    host: rabbitmq
     port: 5672
     username: rabbitmq
     password: rabbitmq
