--- a/notification/src/main/resources/application.yml
+++ b/notification/src/main/resources/application.yml
@@ -5,7 +5,7 @@ spring:
     livereload:
       enabled: false
   rabbitmq:
-    host: localhost
+    host: rabbitmq
     port: 5672
     username: rabbitmq
     password: rabbitmq
