--- a/order/src/main/resources/application.yml
+++ b/order/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-   url: jdbc:mariadb://localhost:3306/orders?createDatabaseIfNotExist=true&serverTimezone=UTC&useSSL=false
+   url: jdbc:mariadb://mariadb:3306/orders?createDatabaseIfNotExist=true&serverTimezone=UTC&useSSL=false
    username: root
    password: root
    driver-class-name: org.mariadb.jdbc.Driver
@@ -20,7 +20,7 @@ spring:
       ddl-auto: update
    show-sql: true
   rabbitmq:
-    host: localhost
+    host: rabbitmq
     port: 5672
     username: rabbitmq
     password: rabbitmq
