--- a/order/src/main/resources/application.yml
+++ b/order/src/main/resources/application.yml
@@ -17,7 +17,7 @@ spring:
    properties:
      hibernate:
       dialect: org.hibernate.dialect.MySQL5InnoDBDialect
-      ddl-auto: update
+      ddl-auto: none
    show-sql: true
   rabbitmq:
     host: rabbitmq
